feat(cli,testsuite): developer tooling + Chaos Engineering suite
aetherium-cli (command dispatcher: init / analyze / selftest / preflight / chaos / --help):
- init <name>: scaffolds a complete AGPL-3.0 mod project (build scripts, NeoForge
 mods.toml, example mod using the ComputePipeline API, per-file AGPL headers).
 Name sanitized to a valid modId; generated mod compiles against the API with zero
 boilerplate.
- analyze <path>: static verification of .class/.jar/dir vs target loader baseline
 (class-file version + ASM CheckClassAdapter.verify), via new BytecodeAnalyzer in
 aetherium-bytecode.

aetherium-testsuite (new module; depends on core+bytecode+native, nothing depends on it):
- ChaosMutators: TRUNCATED / BITFLIP / HEADER_CORRUPT / TYPE_CONFUSION / STACK_UNDERFLOW.
- NativeChaos: FFM-guarded misuse (use-after-free, out-of-bounds, alloc pressure) —
 never wild pointers (those would be uncatchable SIGSEGV).
- ChaosHarness: 600 mods + ~100 native tasks on newVirtualThreadPerTaskExecutor
 (~700 virtual threads), asserts zero escapes + live JVM. ChaosMain + CLI `chaos`.

Verified: `chaos` → 527 reverted / 73 transformed / 100 native contained / 0 escapes →
PASS. `init` → generated mod compiles. `analyze` → reports per-class version+verify.

Docs: bilingual docs/{en,ru}/cli.md + testsuite.md; index + README + CHANGELOG updated.