@@ -1,86 +1,168 @@
+/*
+ * Aetherium Framework — developer CLI.
+ * Copyright (C) 2026 RedstoneTeam. Licensed under AGPL-3.0-or-later.
+ * See <https://www.gnu.org/licenses/>.
+ */
 package org.aetherium.cli;
 
+import org.aetherium.bytecode.analyze.BytecodeAnalyzer;
+import org.aetherium.cli.scaffold.ModScaffolder;
+import org.aetherium.loader.PreFlightCheck;
+import org.aetherium.testsuite.ChaosHarness;
+import org.aetherium.testsuite.ChaosReportRenderer;
+
+import java.nio.file.Path;
+import java.util.List;
+
 /**
- * Aetherium developer CLI &amp; IDE-tooling entry point — <strong>placeholder</strong>.
+ * Aetherium developer CLI — the primary developer experience.
  *
- * <p><b>EN.</b> This is the foundation-phase stub for the Aetherium command-line tool.
- * It will eventually drive mod inspection, loader-target selection, transform dry-runs,
- * and diagnostics export. For now it only prints environment and capability info so the
- * module compiles, runs, and proves the toolchain (GraalVM 21, {@code --enable-preview}).
- * Nothing here is hardcoded as final behaviour; commands are intentionally absent until
- * the {@code aetherium-core} contracts land.
+ * <p><b>EN.</b> Commands: {@code init} (scaffold a ready-to-build, zero-boilerplate mod project),
+ * {@code analyze} (statically verify a class/jar against target-loader constraints), {@code selftest}
+ * (bytecode-engine end-to-end simulation), {@code preflight} (framework Pre-Flight Check), and
+ * {@code chaos} (Chaos Engineering stress test). {@code --help} lists everything.
  *
- * <p><b>RU.</b> Это заглушка этапа основания для инструмента командной строки Aetherium.
- * В дальнейшем он будет управлять инспекцией модов, выбором целевого загрузчика, пробными
- * прогонами трансформаций и экспортом диагностики. Сейчас он лишь печатает информацию об
- * окружении и возможностях, чтобы модуль компилировался, запускался и подтверждал тулчейн
- * (GraalVM 21, {@code --enable-preview}). Здесь ничего не зашито как финальное поведение;
- * команды намеренно отсутствуют до появления контрактов {@code aetherium-core}.
+ * <p><b>RU.</b> Команды: {@code init} (создать готовый к сборке мод-проект без шаблонного кода),
+ * {@code analyze} (статически проверить класс/jar против ограничений целевого загрузчика),
+ * {@code selftest} (end-to-end симуляция движка байт-кода), {@code preflight} (Pre-Flight Check
+ * фреймворка) и {@code chaos} (стресс-тест Chaos Engineering). {@code --help} перечисляет всё.
  */
 public final class AetheriumCli {
 
-    /** Tool identity; the version is a placeholder until {@code aetherium-core} owns it. */
     private static final String TOOL_NAME = "aetherium";
-    private static final String PHASE = "foundation (no commands yet)";
 
     private AetheriumCli() {
-        // Utility entry point; not instantiable.
     }
 
     public static void main(String[] args) {
-        if (args.length > 0 && "selftest".equals(args[0])) {
-            System.exit(runSelfTest());
-            return;
-        }
-        if (args.length > 0 && "preflight".equals(args[0])) {
-            System.exit(runPreFlight());
-            return;
-        }
+        String command = args.length == 0 ? "--help" : args[0];
+        int exit = switch (command) {
+            case "--help", "-h", "help" -> printHelp();
+            case "init" -> runInit(args);
+            case "analyze" -> runAnalyze(args);
+            case "selftest" -> runSelfTest();
+            case "preflight" -> runPreFlight();
+            case "chaos" -> runChaos(args);
+            default -> {
+                System.err.printf("Unknown command '%s'.%n%n", command);
+                printHelp();
+                yield 2;
+            }
+        };
+        System.exit(exit);
+    }
 
-        // Default: report environment and exit cleanly.
-        System.out.printf("%s — Aetherium Framework CLI%n", TOOL_NAME);
-        System.out.printf("  phase   : %s%n", PHASE);
-        System.out.printf("  java    : %s (%s)%n",
-                System.getProperty("java.version"),
-                System.getProperty("java.vm.name"));
-        System.out.printf("  preview : %s%n", previewEnabled() ? "enabled" : "disabled");
-        System.out.printf("  os/arch : %s / %s%n",
-                System.getProperty("os.name"),
-                System.getProperty("os.arch"));
-        System.out.printf("%nCommands:%n"
-                + "  selftest    run the bytecode-engine end-to-end simulation%n"
-                + "  preflight   run the framework Pre-Flight Check (ASM + native + tier)%n");
+    private static int printHelp() {
+        System.out.printf("""
+                %s — Aetherium Framework CLI
+                Universal, high-performance Minecraft modding meta-layer.
 
-        if (args.length > 0) {
-            // Strict, honest error handling: refuse unknown input rather than pretend.
-            System.err.printf("%nUnknown command '%s'. See the command list above.%n", args[0]);
-            System.exit(2);
+                USAGE
+                  aetherium <command> [args]
+
+                COMMANDS
+                  init <name>        Scaffold a new Aetherium-compatible mod project (zero boilerplate).
+                  analyze <path>     Statically verify a .class / .jar / dir against loader constraints.
+                  selftest           Run the bytecode-engine end-to-end simulation.
+                  preflight          Run the framework Pre-Flight Check (ASM + native + capability tier).
+                  chaos [n]          Run the Chaos Engineering stress test (default %d simulated mods).
+                  --help, -h, help   Show this help.
+
+                EXAMPLES
+                  aetherium init my-mod
+                  aetherium analyze build/libs/my-mod.jar
+                  aetherium chaos 600
+
+                Licensed under AGPL-3.0-or-later. Generated mod projects inherit this license.
+                %n""", TOOL_NAME, ChaosHarness.DEFAULT_MOD_COUNT);
+        return 0;
+    }
+
+    /** {@code init <name>} — scaffold a mod project under ./<name>. */
+    private static int runInit(String[] args) {
+        if (args.length < 2 || args[1].isBlank()) {
+            System.err.println("usage: aetherium init <name>");
+            return 2;
+        }
+        String name = args[1];
+        try {
+            ModScaffolder scaffolder = new ModScaffolder(name);
+            // Use the sanitized modId as the directory name so the output path is always valid.
+            Path target = Path.of(scaffolder.modId());
+            List<Path> created = scaffolder.scaffold(target);
+            System.out.printf("Scaffolded Aetherium mod '%s' (modId=%s, mainClass=%s)%n",
+                    name, scaffolder.modId(), scaffolder.mainClass());
+            created.forEach(p -> System.out.println("  + " + p));
+            System.out.printf("%nNext:%n  cd %s && ./gradlew build%n", name);
+            System.out.println("  EN: A complete, AGPL-3.0 mod project using the Aetherium APIs — no boilerplate to write.");
+            System.out.println("  RU: Полный проект мода под AGPL-3.0 с API Aetherium — шаблонный код писать не нужно.");
+            return 0;
+        } catch (Exception e) {
+            System.err.printf("init failed: %s: %s%n", e.getClass().getSimpleName(), e.getMessage());
+            return 1;
         }
     }
 
-    /**
-     * Drives {@link org.aetherium.bytecode.selftest.EngineSelfTest}: read a dummy class, apply a
-     * mock transform, lower an API call to {@code invokedynamic}, verify, load, and invoke — plus
-     * the revert-to-original fallback. Returns a process exit code (0 = pass).
-     */
+    /** {@code analyze <path>} — static bytecode verification against the target loader baseline. */
+    private static int runAnalyze(String[] args) {
+        if (args.length < 2 || args[1].isBlank()) {
+            System.err.println("usage: aetherium analyze <path-to-.class-or-.jar-or-dir>");
+            return 2;
+        }
+        Path path = Path.of(args[1]);
+        System.out.printf("%s analyze — %s (target: Java 21 / major %d)%n%n",
+                TOOL_NAME, path, BytecodeAnalyzer.DEFAULT_TARGET_MAJOR);
+        try {
+            BytecodeAnalyzer.AnalysisReport report = BytecodeAnalyzer.analyze(path);
+            for (BytecodeAnalyzer.ClassResult c : report.classes()) {
+                String status = (c.versionOk() && c.verifyOk()) ? "OK " : "BAD";
+                System.out.printf("  [%s] %s (major %d)%s%s%n",
+                        status, c.className(), c.majorVersion(),
+                        c.versionOk() ? "" : " — exceeds target",
+                        c.verifyOk() ? "" : " — verify: " + c.verifyError());
+            }
+            System.out.printf("%n  EN: %d class(es), %d OK, %d problem(s).%n",
+                    report.classes().size(), report.okCount(), report.problemCount());
+            System.out.printf("  RU: классов: %d, OK: %d, проблем: %d.%n",
+                    report.classes().size(), report.okCount(), report.problemCount());
+            System.out.printf("%nRESULT: %s%n", report.clean() ? "CLEAN ✓" : "PROBLEMS FOUND ✗");
+            return report.clean() ? 0 : 1;
+        } catch (Exception e) {
+            System.err.printf("analyze failed: %s: %s%n", e.getClass().getSimpleName(), e.getMessage());
+            return 1;
+        }
+    }
+
+    private static int runChaos(String[] args) {
+        int modCount = ChaosHarness.DEFAULT_MOD_COUNT;
+        if (args.length > 1) {
+            try {
+                modCount = Math.max(1, Integer.parseInt(args[1]));
+            } catch (NumberFormatException ignored) {
+                System.err.printf("chaos: '%s' is not a number; using default %d.%n", args[1], modCount);
+            }
+        }
+        System.out.printf("%s chaos — Chaos Engineering stress test (%d mods)%n%n", TOOL_NAME, modCount);
+        var report = ChaosHarness.run(modCount);
+        System.out.println(ChaosReportRenderer.render(report));
+        return report.passed() ? 0 : 1;
+    }
+
     private static int runSelfTest() {
         System.out.printf("%s selftest — bytecode engine end-to-end simulation%n%n", TOOL_NAME);
         try {
             org.aetherium.bytecode.selftest.EngineSelfTest.Result result =
                     org.aetherium.bytecode.selftest.EngineSelfTest.run();
-
             result.notes().forEach(note -> System.out.println("  · " + note));
             System.out.println();
             System.out.printf("  dispatch lowering : %s (Demo.run() = %d)%n",
                     result.dispatchLoweringOk() ? "OK" : "FAIL", result.observedValue());
             System.out.printf("  fallback safety   : %s%n", result.fallbackOk() ? "OK" : "FAIL");
-
             if (!result.diagnostics().isEmpty()) {
                 System.out.println("\n  diagnostics emitted (expected from the fallback case):");
                 result.diagnostics().forEach(d ->
                         System.out.printf("    [%s] %s: %s%n", d.severity(), d.code(), d.message()));
             }
-
             System.out.printf("%nRESULT: %s%n", result.passed() ? "PASS ✓" : "FAIL ✗");
             return result.passed() ? 0 : 1;
         } catch (ReflectiveOperationException | RuntimeException failure) {
@@ -90,51 +172,28 @@ public final class AetheriumCli {
         }
     }
 
-    /**
-     * Drives {@link org.aetherium.loader.PreFlightCheck}: runs the internal self-test (dummy ASM
-     * transform + dummy native allocation + Vulkan probe), resolves the capability tier, and renders
-     * the bilingual report. Demonstrates graceful degradation: a missing/broken native library does
-     * not fail the check — it downgrades to pure Java with a human-readable warning. Returns a
-     * process exit code (0 = launch allowed).
-     */
     private static int runPreFlight() {
         System.out.printf("%s preflight — framework Pre-Flight Check%n%n", TOOL_NAME);
         try {
-            org.aetherium.loader.PreFlightCheck.Report report = org.aetherium.loader.PreFlightCheck.run();
-
+            PreFlightCheck.Report report = PreFlightCheck.run();
             report.lines().forEach(line -> System.out.println("  " + line));
-
             System.out.println();
             System.out.printf("  ASM engine     : %s%n", report.asmOk() ? "OK" : "FAIL");
             System.out.printf("  Native bridge  : %s%n", report.nativeHealthy() ? "OK" : "DEGRADED");
             System.out.printf("  Vulkan access  : available=%s devices=%d queueFamilies=%d%n",
                     report.vulkanAvailable(), report.vulkanDeviceCount(), report.vulkanQueueFamilies());
             System.out.printf("  Compute tier   : %s%n", report.tier());
-
             if (!report.diagnostics().isEmpty()) {
                 System.out.println("\n  structured diagnostics:");
                 report.diagnostics().forEach(d ->
                         System.out.printf("    [%s] %s%n", d.severity(), d.code()));
             }
-
             System.out.printf("%nLAUNCH: %s%n", report.launchAllowed() ? "ALLOWED ✓" : "BLOCKED ✗");
             return report.launchAllowed() ? 0 : 1;
         } catch (RuntimeException failure) {
-            // Pre-flight is designed never to throw; if it somehow does, translate rather than crash.
             System.err.printf("preflight crashed unexpectedly: %s: %s%n",
                     failure.getClass().getSimpleName(), failure.getMessage());
             return 1;
         }
-    }
-
-    /**
-     * Best-effort probe of whether class-file preview features are enabled. This is a
-     * heuristic only; the authoritative gate is the build's {@code --enable-preview}.
-     */
-    private static boolean previewEnabled() {
-        // The JVM exposes no portable public API for this; we report unknown-safe.
-        // Centralised detection will move into aetherium-core's capability layer.
-        return Runtime.version().feature() >= 21
-                && Boolean.parseBoolean(System.getProperty("aetherium.preview", "true"));
     }
 }
